@@ -84,20 +84,19 @@ abstract class Z3LegacyAbstractProver<T> extends AbstractProverWithAllSat<T> {
 
   void addParameter(long z3params, String key, Object value) {
     long keySymbol = Native.mkStringSymbol(z3context, key);
-    if (value instanceof Boolean) {
-      Native.paramsSetBool(z3context, z3params, keySymbol, (Boolean) value);
-    } else if (value instanceof Integer) {
-      Native.paramsSetUint(z3context, z3params, keySymbol, (Integer) value);
-    } else if (value instanceof Double) {
-      Native.paramsSetDouble(z3context, z3params, keySymbol, (Double) value);
-    } else if (value instanceof String) {
-      long valueSymbol = Native.mkStringSymbol(z3context, (String) value);
+    if (value instanceof Boolean b) {
+      Native.paramsSetBool(z3context, z3params, keySymbol, b);
+    } else if (value instanceof Integer i) {
+      Native.paramsSetUint(z3context, z3params, keySymbol, i);
+    } else if (value instanceof Double d) {
+      Native.paramsSetDouble(z3context, z3params, keySymbol, d);
+    } else if (value instanceof String string) {
+      long valueSymbol = Native.mkStringSymbol(z3context, string);
       Native.paramsSetSymbol(z3context, z3params, keySymbol, valueSymbol);
     } else {
       throw new IllegalArgumentException(
-          String.format(
-              "unexpected type '%s' with value '%s' for parameter '%s'",
-              value.getClass(), value, key));
+          "unexpected type '%s' with value '%s' for parameter '%s'"
+              .formatted(value.getClass(), value, key));
     }
   }
 
@@ -172,7 +171,7 @@ abstract class Z3LegacyAbstractProver<T> extends AbstractProverWithAllSat<T> {
     long e = creator.extractInfo(f);
     try {
       if (storedConstraints != null) { // Unsat core generation is on.
-        String varName = String.format("Z3_UNSAT_CORE_%d", trackId.getFreshId());
+        String varName = "Z3_UNSAT_CORE_%d".formatted(trackId.getFreshId());
         BooleanFormula t = mgr.getBooleanFormulaManager().makeVariable(varName);
         assertContraintAndTrack(e, creator.extractInfo(t));
         storedConstraints.push(storedConstraints.pop().putAndCopy(varName, f));
@@ -244,12 +243,13 @@ abstract class Z3LegacyAbstractProver<T> extends AbstractProverWithAllSat<T> {
       creator.shutdownNotifier.shutdownIfNecessary();
       final String reason = Native.solverGetReasonUnknown(z3context, z3solver);
       switch (reason) {
-        case "canceled": // see Z3: src/tactic/tactic.cpp
-        case "interrupted": // see Z3: src/solver/check_sat_result.cpp
-        case "interrupted from keyboard": // see Z3: src/solver/check_sat_result.cpp
-          throw new InterruptedException(reason);
-        default:
-          throw new SolverException("Z3 returned 'unknown' status, reason: " + reason);
+        // see Z3:
+        // - src/tactic/tactic.cpp,
+        // - src/solver/check_sat_result.cpp, and
+        // - src/solver/check_sat_result.cpp
+        case "canceled", "interrupted", "interrupted from keyboard" ->
+            throw new InterruptedException(reason);
+        default -> throw new SolverException("Z3 returned 'unknown' status, reason: " + reason);
       }
     }
   }
@@ -347,9 +347,8 @@ abstract class Z3LegacyAbstractProver<T> extends AbstractProverWithAllSat<T> {
         builder.put(key, Double.toString(Native.statsGetDoubleValue(z3context, stats, i)));
       } else {
         throw new IllegalStateException(
-            String.format(
-                "Unknown data entry value for key %s at position %d in statistics '%s'",
-                key, i, Native.statsToString(z3context, stats)));
+            "Unknown data entry value for key %s at position %d in statistics '%s'"
+                .formatted(key, i, Native.statsToString(z3context, stats)));
       }
     }
 
